fixed: multi-select bar layout broken

--- a/src/stylesheets/plugin_management.scss
+++ b/src/stylesheets/plugin_management.scss
@@ -197,7 +197,7 @@
   color: $text-color-disabled;
 }
 
-#page-gamebryo-plugins .menubar {
+#page-gamebryo-plugins .mainpage-header .menubar {
   width: 100%;
 }
 
